replace by sync